เพื่ม entity PositionInPharmacist เพื่อระบุการเข้าถึงหน้าเว็บโดยอิงกับตำแหน่งของเจ้าหน้า - close #204
